（19）-权限管理系统-用户登录

--- a/mvc.BLL/mvc.BLL.csproj
+++ b/mvc.BLL/mvc.BLL.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountBLL.cs" />
     <Compile Include="Core\ExceptionHander.cs" />
     <Compile Include="HomeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
