--- a/mvc.Common/mvc.Common.csproj
+++ b/mvc.Common/mvc.Common.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Suggestion.cs" />
     <Compile Include="ToJsonResult.cs" />
     <Compile Include="ValidationError.cs" />
+    <Compile Include="ValueConvert.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
