--- a/mvc.DAL/mvc.DAL.csproj
+++ b/mvc.DAL/mvc.DAL.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountRepository.cs" />
     <Compile Include="HomeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysExceptionRepository.cs" />
