--- a/mvc.IBLL/mvc.IBLL.csproj
+++ b/mvc.IBLL/mvc.IBLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAccountBLL.cs" />
     <Compile Include="IHomeBLL.cs" />
     <Compile Include="ISysExceptionBLL.cs" />
     <Compile Include="ISysLogBLL.cs" />
