--- a/mvc.IDAL/mvc.IDAL.csproj
+++ b/mvc.IDAL/mvc.IDAL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAccountRepository.cs" />
     <Compile Include="IHomeRepository.cs" />
     <Compile Include="ISysExceptionRepository.cs" />
     <Compile Include="ISysLogRepository.cs" />
