--- a/mvc/mvc.Web.csproj
+++ b/mvc/mvc.Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Controllers\SysSampleController.cs" />
     <Compile Include="Core\ExtendMvcHtml.cs" />
     <Compile Include="Core\LogHandler.cs" />
+    <Compile Include="Core\SupportFilterAttribute.cs" />
     <Compile Include="Core\verify_code.ashx.cs">
       <DependentUpon>verify_code.ashx</DependentUpon>
     </Compile>
