--- a/mvc.Models/mvc.Models.csproj
+++ b/mvc.Models/mvc.Models.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Sys\permModel.cs" />
     <Compile Include="Sys\SysExceptionModel.cs" />
     <Compile Include="Sys\SysLogModel.cs" />
+    <Compile Include="Sys\SysModuleModel.cs" />
+    <Compile Include="Sys\SysModuleOperateModel.cs" />
     <Compile Include="Sys\SysSampleModel.cs" />
   </ItemGroup>
   <ItemGroup>
