--- a/mvc.BLL/mvc.BLL.csproj
+++ b/mvc.BLL/mvc.BLL.csproj
@@ -63,10 +63,11 @@
     <Compile Include="AccountBLL.cs" />
     <Compile Include="Core\ExceptionHander.cs" />
     <Compile Include="HomeBLL.cs" />
-    <Compile Include="ISysUserBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysExceptionBLL.cs" />
     <Compile Include="SysLogBLL.cs" />
+    <Compile Include="SysModuleBLL.cs" />
+    <Compile Include="SysModuleOperateBLL.cs" />
     <Compile Include="SysSampleBLL.cs" />
     <Compile Include="SysUserBLL.cs" />
   </ItemGroup>
