--- a/mvc.IBLL/mvc.IBLL.csproj
+++ b/mvc.IBLL/mvc.IBLL.csproj
@@ -44,7 +44,10 @@
     <Compile Include="IHomeBLL.cs" />
     <Compile Include="ISysExceptionBLL.cs" />
     <Compile Include="ISysLogBLL.cs" />
+    <Compile Include="ISysModuleBLL.cs" />
+    <Compile Include="ISysModuleOperateBLL.cs" />
     <Compile Include="ISysSampleBLL.cs" />
+    <Compile Include="ISysUserBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
