（23）-权限管理系统-角色组模块

--- a/mvc.BLL/mvc.BLL.csproj
+++ b/mvc.BLL/mvc.BLL.csproj
@@ -68,6 +68,7 @@
     <Compile Include="SysLogBLL.cs" />
     <Compile Include="SysModuleBLL.cs" />
     <Compile Include="SysModuleOperateBLL.cs" />
+    <Compile Include="SysRoleBLL.cs" />
     <Compile Include="SysSampleBLL.cs" />
     <Compile Include="SysUserBLL.cs" />
   </ItemGroup>
