--- a/mvc.IBLL/mvc.IBLL.csproj
+++ b/mvc.IBLL/mvc.IBLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ISysLogBLL.cs" />
     <Compile Include="ISysModuleBLL.cs" />
     <Compile Include="ISysModuleOperateBLL.cs" />
+    <Compile Include="ISysRoleBLL.cs" />
     <Compile Include="ISysSampleBLL.cs" />
     <Compile Include="ISysUserBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
