--- a/mvc/mvc.Web.csproj
+++ b/mvc/mvc.Web.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\SysExceptionController.cs" />
     <Compile Include="Controllers\SysLogController.cs" />
     <Compile Include="Controllers\SysModuleController.cs" />
+    <Compile Include="Controllers\SysRightController.cs" />
     <Compile Include="Controllers\SysRoleController.cs" />
     <Compile Include="Controllers\SysSampleController.cs" />
     <Compile Include="Core\ExtendMvcHtml.cs" />
@@ -834,6 +835,7 @@
     <Content Include="Views\Shared\_Partial_AutoGrid.cshtml" />
     <Content Include="Views\SysRole\Create.cshtml" />
     <Content Include="Views\SysRole\Edit.cshtml" />
+    <Content Include="Views\SysRight\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
