（26）-权限管理系统-分配角色给用户 （27）-权限管理系统-分配用户给角色

--- a/mvc.BLL/mvc.BLL.csproj
+++ b/mvc.BLL/mvc.BLL.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBLL.cs" />
+    <Compile Include="BaseBLL.cs" />
     <Compile Include="Core\ExceptionHander.cs" />
     <Compile Include="HomeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
